# virtuverse

./: .gitignore  ARCHITECTURE.md  AZURE_RUNNER_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_RESOLUTION.md  DEPLOYMENT_SUMMARY.md  FIXES_SUMMARY.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  PYTHON_SETUP.md  QUICKSTART.txt  README.md  SELF_HOSTED_RUNNER_GUIDE.md  SETUP.md  SUCCESS_SUMMARY.md  TESTING_GUIDE.md  WINDOWS_RUNNER_COMPATIBILITY.md  WORKFLOWS_SUMMARY.md  WORKFLOW_FIXES.md  WORKFLOW_UPDATES.md  pyproject.toml  requirements.txt  start-all.sh  stop-all.sh
.github/: PROJECT_STRUCTURE.md  QUICK_START.md
.github/workflows/: README.md  azure-deployment.yml  ci-cd.yml  envihub-ci.yml  full-pipeline.yml  main-ci.yml  planthub-ci.yml  v-orchestrator-ci.yml  windows-ci.yml
EnviHub/: IMPLEMENTATION_SUMMARY.md  INSTALL.md  package.json
EnviHub/backend/: server.js
EnviHub/docs/: API.md  ARCHITECTURE.md
PlantHub/: .env.example  .gitignore  INSTALL.md  README.md  package.json
PlantHub/backend/: server.js
PlantHub/docs/: API.md  FEATURES.md
PlantHub/frontend/: .env.example  package-lock.json  package.json
PlantHub/tests/: api.test.js
V-Orchestrator/: .gitignore  INSTALL.md  README.md  package.json
V-Orchestrator/backend/: .env.example  package.json  server.js
V-Orchestrator/frontend/: index.html  package.json  vite.config.js
V-Orchestrator/tests/: api.test.js
VirtuMind/: README.md
VirtuSpace/: .env.example  .gitignore  README.md  SETUP.md  VIRTUSPACE.md  docker-compose.yml  package-lock.json  package.json
VirtuSpace/EnviHub/: .env.example  README.md  jest.config.js  package-lock.json  package.json
VirtuSpace/PlantHub/: .env.example  .gitignore  README.md  package-lock.json  package.json
VirtuSpace/V-Orchestrator/: README.md  (+2 more)
VirtuSphere/: README.md
VirtuVerse-Studio/: .env.example  .gitignore  README.md  package-lock.json  package.json
backend/: Dockerfile  package.json
tests/: __init__.py  test_package.py
virtuverse/: __init__.py
virtuverse-studio-docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  README.md  USER_GUIDE.md
(+152 files in other folders)
