[tool.poetry]
name = "virtuverse"
version = "1.0.0"
description = "VirtuVerse Studio - E2E Virtualization & Simulation Universe"
authors = ["Bosch"]
license = "ISC"
readme = "README.md"
packages = [{include = "virtuverse"}]

[tool.poetry.dependencies]
python = "^3.9"
# Core dependencies
pyyaml = "^6.0.1"
requests = "^2.31.0"
python-dotenv = "^1.0.0"

# Web framework (if needed for Python services)
flask = {version = "^3.0.0", optional = true}
fastapi = {version = "^0.104.1", optional = true}
uvicorn = {version = "^0.24.0", optional = true}

# Database (if needed)
sqlalchemy = {version = "^2.0.23", optional = true}
psycopg2-binary = {version = "^2.9.9", optional = true}

# Data processing
pandas = {version = "^2.1.3", optional = true}
numpy = {version = "^1.26.2", optional = true}

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"

[tool.poetry.extras]
web = ["flask", "fastapi", "uvicorn"]
db = ["sqlalchemy", "psycopg2-binary"]
data = ["pandas", "numpy"]
all = ["flask", "fastapi", "uvicorn", "sqlalchemy", "psycopg2-binary", "pandas", "numpy"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | node_modules
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
